config/default/validating_policies/dataplane_ports_validating_admission_policy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: ports.dataplane.gateway-operator.konghq.com
spec:
  matchConstraints:
    resourceRules:
      - apiGroups:
          - "gateway-operator.konghq.com"
        apiVersions:
          - "v1beta1"
        operations:
          - "CREATE"
          - "UPDATE"
        resources:
          - "dataplanes"
  variables:
  - name: ingressPorts
    expression: object.spec.network.services.ingress.ports
  - name: podTemplateSpec
    expression: object.spec.deployment.podTemplateSpec
  - name: proxyContainers
    expression: |
      variables.podTemplateSpec.spec.containers.filter(c, c.name == 'proxy')
  - name: proxyContainer
    expression: |
      variables.proxyContainers.size() > 0 ?
        variables.proxyContainers[0] :
        null
  - name: envFilteredPortMaps
    expression: |
      variables.proxyContainer.env.filter(e, e.name == "KONG_PORT_MAPS")
  - name: envFilteredProxyListen
    expression: |
      variables.proxyContainer.env.filter(e, e.name == "KONG_PROXY_LISTEN")
  - name: envPortMaps
    expression: |
      variables.envFilteredPortMaps.size() > 0 ? variables.envFilteredPortMaps[0].value : null
  - name: envProxyListen
    expression: |
      variables.envFilteredProxyListen.size() > 0 ? variables.envFilteredProxyListen[0].value : null

  # NOTE: Rules below do not validate the ports from the spec.network.services.ingress.ports
  # when no KONG_PORT_MAPS or KONG_PROXY_LISTEN env variables are present in the proxy container.
  # This has been the case before the introduction of validating admission policies so we are keeping
  # the same behavior.

  # Using string functions from: https://pkg.go.dev/github.com/google/cel-go/ext
  validations:
  - messageExpression: "'Each port from spec.network.services.ingress.ports has to have an accompanying port in KONG_PORT_MAPS env'"
    expression: |
      !has(object.spec.network) ||
      !has(object.spec.network.services) ||
      !has(object.spec.network.services.ingress) ||
      !has(object.spec.network.services.ingress.ports) ||
      !has(variables.proxyContainer.env) ||
      variables.envPortMaps == null ||
      (
        variables.ingressPorts.all(p, variables.envPortMaps.
                  split(",").
                  exists(pm,
                      pm.split(":")[1].trim() == string(p.targetPort)
                      )
                  )
      )
    reason: Invalid
  - messageExpression: "'Each port from spec.network.services.ingress.ports has to have an accompanying port in KONG_PROXY_LISTEN env'"
    expression: |
      !has(object.spec.network) ||
      !has(object.spec.network.services) ||
      !has(object.spec.network.services.ingress) ||
      !has(object.spec.network.services.ingress.ports) ||
      !has(variables.proxyContainer.env) ||
      variables.envProxyListen == null ||
      (
        variables.ingressPorts.all(p, variables.envProxyListen.
                  split(",").
                  exists(pm,
                    pm.trim().split(" ")[0].split(":")[1].trim() == string(p.targetPort)
                    )
                  )
      )
    reason: Invalid
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: binding-ports.dataplane.gateway-operator.konghq.com
spec:
  policyName: ports.dataplane.gateway-operator.konghq.com
  validationActions:
  - Deny
---
